--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,8 @@ body {
 }
 
 .card {
-  flex: 0 0 300px;
+  flex: 1 1 250px;
+  max-width: 300px;
   margin: 1em;
   padding: 2em;
   border-radius: 12px;
