--- a/css/style.css
+++ b/css/style.css
@@ -187,3 +187,19 @@ footer {
   max-width: 700px;
   text-align: center;
 }
+
+/*
+  Visually hide elements while keeping them
+  accessible to screen readers.
+*/
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  white-space: nowrap;
+  border: 0;
+}
